# dbt-takehome-template

./: .duckdbrc  .envrc  .gitignore  CONTRIBUTING.md  DUCKDB_QUERIES.md  INTERNAL.md  LICENSE  README.md  TASK.md  dbt_project.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
macros/: example_macro.sql
models/: _sources.yml
models/staging/: README.md  stg_entries_example.sql  stg_orders.sql
models/staging/marts/: fct_monthly_revenue.sql
models/tests/: schema.yml
profiles/: profiles.example.yml
scripts/: generate_seeds.py  setup.ps1  setup.sh  validate_seeds.py  view_docs.py
seeds/: DATA_SUMMARY.md  contests.csv  deposits.csv  entries.csv  users.csv  withdrawals.csv
source_data/: DATA_SUMMARY.md  contests.parquet  deposits.parquet  users.parquet  withdrawals.parquet
